# auth-code

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/uv_agent_auth_code/: __init__.py  service.py
tests/: test_plugin.py
