[project]
name = "uv-agent-auth-code"
version = "0.2.0"
description = "Local auth-code challenge plugin for uv-agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uv-agent>=0.21.1",
]

[project.entry-points."uv_agent.plugins"]
auth-code = "uv_agent_auth_code:plugin"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_agent_auth_code"]
